deconz/deconz-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deconz-svc
  namespace: deconz
spec:
  selector:
    app: deconz
  ports:
  - name: deconz
    port: 80
    targetPort: 80
